nginx-deployment/nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-sec-policy
  namespace: devops-test
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.56.1/24
